💄 : melhoria no css

--- a/index.html
+++ b/index.html
@@ -24,17 +24,60 @@
     </header>
 
     <main>
-        <div class="texto-principal">
-            <h1>Dê uma segunda vida aos seus eletrônicos!</h1>
-            <p>Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
-        </div>
-        <div class="imagem-destaque">
-            <img src="assets/imagens/recicla.png" alt="Imagem de destaque"> 
-        </div>
-        
-           <div class="btn-main-verde"><button href="#" class="btn-primary ">Quero doar <img src="assets/imagens/icons/ICON1.png" alt="icone-presente"></button></div>
+        <section class="texto-section">
+                <h1 id="titulo-main">Dê uma segunda vida aos seus eletrônicos!</h1>
+                <p id="p-main">Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
+        </section>
 
-           <div class="btn-main-azul"><button href="#" class="btn-secondary">Quero Adquirir <img src="assets/imagens/icons/icon2-azul.png" alt="icone-presente"></button></div>
+        <section class="imagen-section">
+            <div class="imagem-destaque">
+                <img src="assets/imagens/recicla.png" alt="Imagem de destaque">
+            </div>
+        </section>
+        
+           <section class="btn-section">
+               <button href="#" class="btn-primary ">Quero doar <img src="assets/imagens/icons/ICON1.png" alt="icone-presente"></button>
+               <button href="#" class="btn-secondary">Quero Adquirir <img src="assets/imagens/icons/icon2-azul.png" alt="icone-presente"></button>
+           </section>
+
+           <section class="dados">
+            <div class="dados-texto">
+                <h3>2.5k+</h3>
+                <p>Eletrônicos doados</p>
+            </div>
+
+            <div class="dados-texto">
+                <h3>1.8k+</h3>
+                <p>Famílias beneficiadas</p>
+            </div>
+
+            <div class="dados-texto">
+                <h3>95%</h3>
+                <p>Satisfação dos usuários</p>
+            </div>
+
+           </section>
+
+           <section class="como-funciona">
+            <div class="subtexto">
+                <h2>Como Funciona?</h2>
+                <p>É mais fácil que trocar a pilha do controle! </p>
+
+            </div>
+
+            <div class="doadores">
+                <img src="./assets/imagens/icons/icon_Doador.png" alt="">
+                <h4>Para Doadores</h4>
+                <p>Transforme seu "lixo eletrônico" no tesouro de alguém</p>
+
+                <div class="funcionalidades">
+                    <img src="" alt="">
+
+                </div>
+
+            </div>
+
+           </section>
     </main>
 
     <footer>
