--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 
     <main>
         <section class="texto-section">
-                <h1 id="titulo-main">Dê uma segunda vida aos seus eletrônicos!</h1>
-                <p id="p-main">Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
+                <div class="titulo-principal">
+                    <h1 id="titulo-main">Dê uma segunda vida aos seus eletrônicos!</h1>
+                    <p id="p-main">Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
+                </div>
         </section>
 
-        <section class="imagen-section">
-            <div class="imagem-destaque">
+        <section class="imagem-section">
                 <img src="assets/imagens/recicla.png" alt="Imagem de destaque">
-            </div>
+
         </section>
         
            <section class="btn-section">
